Compositing scale node border error #43784

Closed
opened 2015-02-22 23:20:07 +01:00 by ratty redemption · 13 comments
- Operating System, Graphics card ---

cpu: intel core i3 2350 2.3 ghz
ram: 4 gb
gfx: intel hd graphics 3000
os: windows 7 home premium sp 1

- Blender version with error, and version that worked ---

error found in: 63b0a7f win64.
was working in: f65b369 win64.

- Short description of error ---

blender internal compositing scale node border error.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

please compare the two attached screencaps, and you should see a very simple node layout... of which the newer builds are rendering a 1 pixel border on the left and bottom edges of the rendered and preview images.

and although not obvious in these screencaps, my other tests look as if the whole render is shifted up and to the right by 1 pixel, so previous render layers like alpha channels no longer align perfectly.

if the scale node is muted or deleted, the error does not happen as far as i can tell.

Untitled3.jpg

Untitled4.jpg

- Operating System, Graphics card --- cpu: intel core i3 2350 2.3 ghz ram: 4 gb gfx: intel hd graphics 3000 os: windows 7 home premium sp 1 - Blender version with error, and version that worked --- error found in: 63b0a7f win64. was working in: f65b369 win64. - Short description of error --- blender internal compositing scale node border error. - Steps for others to reproduce the error (preferably based on attached .blend file) --- please compare the two attached screencaps, and you should see a very simple node layout... of which the newer builds are rendering a 1 pixel border on the left and bottom edges of the rendered and preview images. and although not obvious in these screencaps, my other tests look as if the whole render is shifted up and to the right by 1 pixel, so previous render layers like alpha channels no longer align perfectly. if the scale node is muted or deleted, the error does not happen as far as i can tell. ![Untitled3.jpg](https://archive.blender.org/developer/F145321/Untitled3.jpg) ![Untitled4.jpg](https://archive.blender.org/developer/F145323/Untitled4.jpg)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @rattyredemption

Added subscriber: @rattyredemption
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Can reproduce. Simple .blend to test size_node_bug.blend

Can reproduce. Simple .blend to test [size_node_bug.blend](https://archive.blender.org/developer/F145484/size_node_bug.blend)
Julian Eisel changed title from blender internal compositing scale node border error. to Compositing scale node border error 2015-02-23 20:17:26 +01:00

@JulianEisel thanks for confirming this.

was it redundant of me to include in the title "blender internal"?

i've never used cycles so wasn't sure if this would affect both renderers.

@JulianEisel thanks for confirming this. was it redundant of me to include in the title "blender internal"? i've never used cycles so wasn't sure if this would affect both renderers.
Member

It could just lead to the misconception that this is a bug that only occurs in BI, which isn't the case. If you don't know it, just leave it out, this is a thing that developers can test without big difficulties. So don't worry, all fine, I just wanted to make sure there are no misconceptions ;)

It could just lead to the misconception that this is a bug that only occurs in BI, which isn't the case. If you don't know it, just leave it out, this is a thing that developers can test without big difficulties. So don't worry, all fine, I just wanted to make sure there are no misconceptions ;)
Sergey Sharybin was assigned by Julian Eisel 2015-02-23 21:06:28 +01:00
Member

Caused by 02fad7dca4 so it goes to Sergey! ;)

Caused by 02fad7dca4adc5 so it goes to Sergey! ;)

@JulianEisel understood and i'll keep that in mind, thanks.

@JulianEisel understood and i'll keep that in mind, thanks.

This issue was referenced by 4c75f77669

This issue was referenced by 4c75f776690cfec51ad3ca686805be6edf21b514

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4c75f77669.

Closed by commit 4c75f77669.

Added subscriber: @Sergey

Added subscriber: @Sergey

@Sergey thanks very much for fixing the bug, blender seems to be working fine now.

@Sergey thanks very much for fixing the bug, blender seems to be working fine now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43784
No description provided.